--- a/representation/CMakeLists.txt
+++ b/representation/CMakeLists.txt
@@ -3,7 +3,11 @@ find_package(SFML 2.6 COMPONENTS graphics window system audio REQUIRED)
 # Compile all source files in representation/src recursively
 file(GLOB_RECURSE REP_SOURCES "src/*.cpp")
 
-add_library(pacman_representation ${REP_SOURCES})
+add_library(pacman_representation ${REP_SOURCES}
+        src/ConcreteFactory.cpp
+        include/ConcreteFactory.h
+        src/Camera.cpp
+        include/Camera.h)
 
 # Link Logic and SFML
 target_link_libraries(pacman_representation
