--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,23 +1,15 @@
 version: 2.1
+
 jobs:
   build:
+    resource_class: small
     docker:
-      - image: cimg/base:current
+      - image: ubuntu:22.04
     steps:
       - checkout
-      - run:
-          name: Install Dependencies
-          command: |
-            sudo apt-get update
-            sudo apt-get install -y build-essential cmake libsfml-dev
-      - run:
-          name: Configure
-          command: cmake -S . -B build
-      - run:
-          name: Build
-          command: cmake --build build
-workflows:
-  version: 2
-  build_workflow:
-    jobs:
-      - build
+      - run: apt update
+      - run: DEBIAN_FRONTEND=noninteractive TZ=Europe/Brussels apt install -y gcc g++ libsfml-dev cmake git
+      - run: mkdir -p build
+      - run: cd build && cmake ..
+      - run: cd build && make
+      - run: cd build && make install
