--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,31 +4,14 @@ jobs:
   build:
     resource_class: small
     docker:
-      - image: ubuntu:22.04
+      - image: ubuntu:24.04
     steps:
       - checkout
-
-      - run:
-          name: Update apt repositories
-          command: apt-get update
-
-      - run:
-          name: Install compiler and SFML
-          command: DEBIAN_FRONTEND=noninteractive TZ=Europe/Brussels apt-get install -y gcc g++ libsfml-dev cmake git build-essential
-
-      - run:
-          name: Configure CMake
-          command: |
-            mkdir -p build
-            cd build
-            cmake ..
-
-      - run:
-          name: Compile Project
-          command: |
-            cd build
-            make
-            # REMOVED: && make install (This was causing the error)
+      - run: apt-get update
+      - run: DEBIAN_FRONTEND=noninteractive TZ=Europe/Brussels apt-get install -y gcc g++ libsfml-dev cmake git build-essential
+      - run: mkdir -p build
+      - run: cd build && cmake ..
+      - run: cd build && make
 
 workflows:
   version: 2
