implemented highscore adn level progression

--- a/logic/CMakeLists.txt
+++ b/logic/CMakeLists.txt
@@ -18,6 +18,7 @@ add_library(pacman_logic ${LOGIC_SOURCES}
         include/entities/Ghost.h
         include/entities/DynamicEntity.h
         include/entities/Fruit.h
+        include/core/HighScore.h
 )
 
 # Expose include folders so Representation can see World.h, EntityModel.h, etc.
